# cs61c

./: CMakeLists.txt  docker-compose.yml
lab01/: ex10_ll_cycle.c  ex2_pointer_basics.c  ex3_pointers_and_functions.c  ex4_ptr_heap_stack.c  ex5_arrays.c  ex6_pointer_arithmetic.c  ex7_strings.c  ex8_structs.c  ex9_double_pointers.c
lab03/: ex3_answers.txt  ex3_memcheck.s  ex4_discrete_fn.s  ex5_factorial.s
lab04/: ex1.s  ex3.s
proj1/src/: custom_tests.c  snake.c  state.c
proj2/: studenttests.py
proj2/src/: abs.s  argmax.s  classify.s  dot.s  matmul.s  read_matrix.s  relu.s  write_matrix.s
